--- a/ros_ws/src/crazyswarm/launch/allCrazyflies.yaml
+++ b/ros_ws/src/crazyswarm/launch/allCrazyflies.yaml
@@ -1,9 +1,17 @@
 crazyflies:
   - id: 1
     channel: 100
-    initialPosition: [1.5, 1.5, 0.0]
-    type: medium
-  - id: 40
+    initialPosition: [-1.0, 1.0, 0.0]
+    type: default # (Yunwoo)
+  - id: 2
+    channel: 90
+    initialPosition: [-1.0, -1.0, 0.0]
+    type: default # (Yunwoo)
+  - id: 3
+    channel: 80
+    initialPosition: [1.0, 1.0, 0.0]
+    type: default # (Yunwoo)
+  - id: 4
     channel: 100
-    initialPosition: [-1.0, -0.5, 0.0]
-    type: default
+    initialPosition: [1.0, -1.0, 0.0]
+    type: default # (Yunwoo)
